ProjectExplorer: Tighten the pattern for possible compiler file names

A number of tools were matched that weren't compilers.
Examples:
    - arm-none-eabi-gcc-ar (also: -nm, -ranlib, ...)
    - git-clang-format

Fixes: QTCREATORBUG-22439
Change-Id: Ic598daebb6cfd534690145a0446649a8906aff5d
Reviewed-by: Orgad Shaneh <orgads@gmail.com>